# src/routes/content.routes.ts
@@ -13,6 +13,10 @@ const router = Router();
 router.get("/", ContentController.getContents);
 router.get("/:id", ContentController.getContentById);
 router.get("/label/:labelId", ContentController.getContentsByLabel);
+router.get(
+  "/contributor/:contributorId",
+  ContentController.getContentsByContributor,
+);
 router.post(
   "/",
   authenticateToken,
